@@ -159,6 +159,9 @@ tau2_new = 0;
 
 %%
 
+% Plot only once in a while
+PLOT_PERIOD = 10;
+
 for iter = 1:NB_ITER
     
     % Compute the Expected Quantile Improvement (EQI) criterion on the grid
@@ -167,28 +170,31 @@ for iter = 1:NB_ITER
     % Pick the point where the EQI is maximum as our next evaluation point
     [EQI_max, i_max] = max (EQI_val);
     
-    % Figure: upper panel
-    stk_subplot (2, 1, 1);  cla;
-    stk_plot1d ([],[], xg, zg, z_pred);
-    hold on;
-    dataunique = unique(EQI_crit.model.input_data.x);
-    for k = 1:length(dataunique)
-        MINIMUM = 10^10;
-        MAXIMUM = -10^10;
-        for i = 1:length(EQI_crit.model.input_data.x)
-            if EQI_crit.model.input_data.x(i) == dataunique(k)
-                MINIMUM = min(MINIMUM, EQI_crit.model.output_data.z(i));
-                MAXIMUM = max(MAXIMUM, EQI_crit.model.output_data.z(i));
-            end
-        end
-        plot([dataunique(k) dataunique(k)],[MINIMUM MAXIMUM],'b-o','LineWidth',1)
+    if mod (iter, PLOT_PERIOD) == 1
+        
+        % Figure: upper panel
+        stk_subplot (2, 1, 1);  cla;
+        stk_plot1d ([],[], xg, zg, z_pred);
         hold on;
+        dataunique = unique(EQI_crit.model.input_data.x);
+        for k = 1:length(dataunique)
+            MINIMUM = 10^10;
+            MAXIMUM = -10^10;
+            for i = 1:length(EQI_crit.model.input_data.x)
+                if EQI_crit.model.input_data.x(i) == dataunique(k)
+                    MINIMUM = min(MINIMUM, EQI_crit.model.output_data.z(i));
+                    MAXIMUM = max(MAXIMUM, EQI_crit.model.output_data.z(i));
+                end
+            end
+            plot([dataunique(k) dataunique(k)],[MINIMUM MAXIMUM],'b-o','LineWidth',1)
+            hold on;
+        end
+        
+        % Figure: lower panel
+        stk_subplot (2, 1, 2);  cla;
+        plot (xg, EQI_val); xlim (BOX); hold on;
+        plot (xg(i_max), EQI_max, 'ro', 'MarkerFaceColor', 'y');
     end
-    
-    % Figure: lower panel
-    stk_subplot (2, 1, 2);  cla;
-    plot (xg, EQI_val); xlim (BOX); hold on;
-    plot (xg(i_max), EQI_max, 'ro', 'MarkerFaceColor', 'y');
     
     % Add the new evaluation to the DoE
     x_new = xg(i_max, :);
